# building_modeling

./: CGAError.txt  CGAReport.txt  add_flyto_button.py  apply_final_fix.py  apply_v10.py  apply_v10_json.py  apply_v11.py  cell4_code.py  check_glb.py  create_v10.py  debug_nb.py  export_test.py  export_test2.py  final_fix.py  final_patch_v10.py  final_viewer_fix.py  fix.bat  fix_cell1.py  fix_cell3.py  fix_coordinates_and_error14.py  fix_error14_v8.py  fix_leafmap.py  fix_notebook.py  fix_revert_v9.py  fix_scipy.py  fix_viewer_error.py  fix_viewer_final.py  fix_viewer_v15.py  fix_viewer_v16.py  fix_viewer_v17.py  fix_viewer_v19.py  fix_viewer_v4.py  inject_viewer.py  inject_viewer_v2.py  inspect_glb.py  inspect_rpk.py  install_scipy.py  main.py  pipeline.ipynb  pipeline_new.ipynb  (+27 more)
.ipynb_checkpoints/: pipeline_new-checkpoint.ipynb  viewer_final-checkpoint.html  viewer_full-checkpoint.html  viewer_v15-checkpoint.html  viewer_v16-checkpoint.html
output_models/: CGAReport.txt  procedural_building_0.glb
