[project]
name = "building-modeling"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10,<3.14"
dependencies = [
    "leafmap",
    "shapely",
    "pyproj",
    "pyprt",
    "pythreejs",
    "ipywidgets",
    "jupyterlab",
    "setuptools",
    "trimesh",
    "scipy",
]
